# smalloc

./: CMakeLists.txt  LICENSE
lib/: CMakeLists.txt
lib/include/: smalloc.h
lib/src/: smalloc.cpp
scripts/: build.sh
test/: CMakeLists.txt  bench.cpp  test.cpp
